# PR-Data-Correlations

./: .gitignore  .pre-commit-config.yaml  Main Report Notebook.ipynb  Makefile  README.md  pyproject.toml  requirements.txt
data/clean/: DELITOS TIPO1.xlsx  po-pr-change-factors-clean.csv  po-pr-change-totals-municipalities-clean.csv  po-pr-total-change-clean.csv  po-total-pr-clean.csv
data/clean/Delitos y Desempleos/: delitos_desempleos_merged_(deltas_mensuales).csv
data/clean/DelitosTipo1/: DelitosTipo1-2010-2020(interpolado).csv  DelitosTipo1-2010-2020.csv  DelitosTipo1-2010-2020_deltas_mensuales(interpolado).csv  Policia-DelitosTipoI-2022-12.xls
data/clean/Tasa de Desempleos/: tasa_de_desempleos_y_mas_limpio.csv
data/clean/TasaPersDesempleo-Quiebras/: proyecto.ipynb
data/raw/: aee-meta-ultimo-fixed.csv  aee-meta-ultimo.csv  po-pr-change-totals-municipalities.xlsx
src/: DELITOStipo1clean.ipynb  StackStream Tipo 1.ipynb  Taza de mortalidad 2017 - 2022.ipynb  cleaning_actividad_sismica.ipynb  cofint-municipios.ipynb
src/angel/: Corr Delitos-Desempleo.ipynb  regresion-random.ipynb
src/hallyma/: Violin plots.ipynb
src/hector/: Limpieza Delitos Tipo 1 Municipios 2010-2020.ipynb  Union de delitos con desempleos.ipynb  cleaning_actividad_sismica.ipynb
src/jasiel/: AEE.ipynb  crime_visualisation.ipynb
src/juan/: Limpieza de Desempleos.ipynb  Limpieza de Quiebras.ipynb  quiebras y desempleos.ipynb
src/matteing/: population-change-factors.ipynb  population-change-totals-municipalities.ipynb  population-total.ipynb
src/scripts/: csv_generator.py
(+141 files in other folders)
