[tool.poetry]
name = "pr-data-correlations"
version = "0.1.0"
description = ""
authors = ["Sergio Mattei <sergiomattei@outlook.com>"]
readme = "README.md"
packages = [{include = "pr_data_correlations"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
numpy = "^1.24.3"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
