[tool.poetry]
name = "pr-data-correlations"
version = "0.1.0"
description = ""
authors = ["Sergio Mattei <sergiomattei@outlook.com>"]
readme = "README.md"
packages = [{include = "pr_data_correlations"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
numpy = "^1.24.3"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "5.14.1"
scikit-learn = "^1.2.2"
black = {extras = ["jupyter"], version = "^23.3.0"}
pre-commit = "^3.3.2"

[tool.poetry.group.dev.dependencies]
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
